@@ -148,6 +148,7 @@ sub addGroupAlias
         }
     }
 
+    $group->{noUpdateAlias} = 1;
     $self->_addmailboxRelatedObject($alias, $group);
 }
 
@@ -156,6 +157,10 @@ sub _addmailboxRelatedObject
     my ($self, $alias, $group) = @_;
 
     return if $self->_mailboxRelatedObjectInGroup($group);
+
+    if ((exists $group->{updateGroupAliases}) and $group->{updateGroupAliases}) {
+        return;
+    }
 
     $group->add('objectClass', 'mailboxRelatedObject', 1);
     my @currentMail = $group->get('mail');
@@ -171,6 +176,10 @@ sub _delmailboxRelatedObject
     my ($self, $alias, $group) = @_;
 
     return unless $self->_mailboxRelatedObjectExists($alias);
+
+    if ((exists $group->{updateGroupAliases}) and $group->{updateGroupAliases}) {
+        return;
+    }
 
     my @classes = $group->get('objectClass');
     my @mail = $group->get('mail');
@@ -358,10 +367,17 @@ sub updateGroupAliases
 {
     my ($self, $group) = @_;
 
+    my $noUpdateAlias = delete $group->{noUpdateAlias};
+    if ($noUpdateAlias) {
+        return;
+    }
+
+    $group->{updateGroupAliases} = 1;
     foreach my $alias (@{ $self->groupAliases($group) }) {
         $self->delAlias($alias);
         $self->addGroupAlias($alias, $group);
     }
+    delete $group->{updateGroupAliases};
 }
 
 # Method: addMaildrop
@@ -473,6 +489,7 @@ sub delGroupAlias
     my @aliases = @{$self->groupAliases($group)};
     if (@aliases and not $self->_mailboxRelatedObjectInGroup($group)) {
         $alias = shift @aliases;
+        $group->{noUpdateAlias} = 1;
         $self->_addmailboxRelatedObject($alias, $group);
     }
 }
